--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -3,5 +3,10 @@
 {% block content %}
 <h1>Sign Up</h1>
 
+<form method="POST" action="{% url 'signup' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" class="btn" value="Sign Up">
+</form>
 
 {% endblock %}
