--- a/main_app/templates/babies/index.html
+++ b/main_app/templates/babies/index.html
@@ -11,7 +11,7 @@
 			<span class="card-title">{{ baby.name }}</span>
 			<p>Parent User: {{baby.user.name}}</p>
 			<p>Date of Birth: {{ baby.date_of_birth }}</p>
-			<p>Age: Functionality Incoming</p>
+			<!-- <p>Age: Functionality Incoming</p> -->
 			<p>Height (cm): {{ baby.height }}</p>
 			<p>Weight (lb): {{ baby.weight }}</p>
 		</div>
