--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,21 @@
 				</ul>
 				<ul class="right">
 					<li><a href="{% url 'about' %}">About</a></li>
+					{% if user.is_authenticated %}
+					<li><a href="{% url 'index' %}">View Babies</a></li>
+					<li><a href="{% url 'baby_create' %}">Add a Baby</a></li>
+					<li><a href="{% url 'playdates_index' %}">View Play Dates</a></li>
+					<li><a href="{% url 'playdates_create' %}">Organize a Play Date</a></li>
+					<li>
+						<form id="logout-form" method="POST" action="{% url 'logout' %}">
+							{% csrf_token %}
+							<button type="submit" class="btn">Log out</button>
+						</form>
+					</li>
+					{% else %}
+					<li><a href="{% url 'login' %}">Log In</a></li>
+					<li><a href="{% url 'signup' %}">Sign Up</a></li>
+					{% endif %}
 				</ul>
 			</div>
 		</nav>
