updated main_app templates

--- a/main_app/templates/main_app/baby_confirm_delete.html
+++ b/main_app/templates/main_app/baby_confirm_delete.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Remove Child Profile</h1>
 
+<h4>Are you sure you want to remove child profile<span>{{ object.name }}</span>?</h4>
+<form action="" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="Yes - Delete!" class="btn">
+    <a href="{% url 'detail' baby.id %}">Cancel</a>
+</form>
 {% endblock %}
