--- a/main_app/templates/main_app/baby_form.html
+++ b/main_app/templates/main_app/baby_form.html
@@ -2,4 +2,18 @@
 
 {% block content %}
 
-{% endblock %}
+{% if object %}
+<h1>Edit <span>{{ object.name }}</span></h1>
+{% else %}
+<h1>Add Baby Profile</h1>
+{% endif %}
+
+<form action="" method="Post">
+    {% csrf_token %}
+    <table>
+        {{ form.as_table }}
+    </table>
+    <button type="submit" class="btn">Submit</button>
+</form>
+
+{% endblock content %}
