--- a/main_app/templates/main_app/playdate_confirm_delete.html
+++ b/main_app/templates/main_app/playdate_confirm_delete.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Delete Playdate</h1>
 
+<h4>Are you sure you want to delete playdate<span>{{ object.name }}</span>?</h4>
+
+<form action="" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="Yes - Delete!" class="btn">
+    <a href="{% url 'playdates_detail' object.id %}">Cancel</a>
+</form>
 {% endblock %}
