--- a/main_app/templates/main_app/playdate_detail.html
+++ b/main_app/templates/main_app/playdate_detail.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>Playdate Detail</h1>
 
+<h1>Playdate Details</h1>
 
+<div class="row">
+    <div class="col s6 col-offset-3">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ playdate.name }}</span>
+                <p>Color: {{ playdate.color }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'playdates_update' playdate.id %}">Edit</a>
+                <a href="{% url 'playdates_delete' playdate.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
