--- a/main_app/templates/main_app/playdate_list.html
+++ b/main_app/templates/main_app/playdate_list.html
@@ -1,7 +1,17 @@
 {% extends 'base.html' %}
-
 {% block content %}
+
 <h1>Playdate List</h1>
 
+{% for playdate in playdate_list %}
+<a href="{% url 'playdates_detail' playdate.id %}">
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">{{ playdate.name }}</span>
+            <p>Color: {{ playdate.color }}</p>
+        </div>
+    </div>
+</a>
+{% endfor %}
 
 {% endblock %}
