--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -22,24 +22,57 @@
 	<div class="col s6">
 
 		<form action="{% url 'add_feeding' cat.id %}" method="POST">
-		  {% csrf_token %}
-		  {{ feeding_form.as_p  }}
-		  <button type="submit" class="btn">Add Feeding</button>
+			{% csrf_token %}
+			{{ feeding_form.as_p }}
+			<button type="submit" class="btn">Add Feeding</button>
 		</form>
-	
+
 		<table class="striped">
-		  <thead>
-			<tr><th>Date</th><th>Meal</th></tr>
-		  </thead>
-		  <tbody>
-			{% for feeding in cat.feeding_set.all %}
-			  <tr>
-				<td>{{feeding.date}}</td>
-				<td>{{feeding.get_meal_display}}</td>
-			  </tr>
-			{% endfor %}
-		  </tbody>
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Meal</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for feeding in cat.feeding_set.all %}
+				<tr>
+					<td>{{feeding.date}}</td>
+					<td>{{feeding.get_meal_display}}</td>
+				</tr>
+				{% endfor %}
+			</tbody>
 		</table>
-	  </div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col s6">
+
+		<form action="{% url 'playdates_create' baby.id %}" method="POST">
+			{% csrf_token %}
+			{{ playdate_form.as_p }}
+			<button type="submit" class="btn">Add Playdate</button>
+		</form>
+
+		<table class="striped">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Time</th>
+					<th>Location</th>	
+				</tr>
+			</thead>
+			<tbody>
+				{% for playdate in baby.playdates_set.all %}
+				<tr>
+					<td>{{playdate.date}}</td>
+					<td>{{playdate.time}}</td>
+					<td>{{playdate.location}}</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
 </div>
 {% endblock content %}
