--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -14,14 +14,14 @@
 				<p>Weight (lb): {{ baby.weight }}</p>
 			</div>
 			<div class="card-action">
-				<a href="{% url 'babies_update' baby.id %}">Edit</a>
-				<a href="{% url 'babiess_delete' baby.id %}">Remove</a>
+				<a href="{% url 'baby_update' baby.id %}">Edit</a>
+				<a href="{% url 'baby_delete' baby.id %}">Remove</a>
 			</div>
 		</div>
 	</div>
 	<div class="col s6">
 
-		<form action="{% url 'add_feeding' cat.id %}" method="POST">
+		<form action="{% url 'add_feeding' baby.id %}" method="POST">
 			{% csrf_token %}
 			{{ feeding_form.as_p }}
 			<button type="submit" class="btn">Add Feeding</button>
@@ -35,7 +35,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				{% for feeding in cat.feeding_set.all %}
+				{% for feeding in baby.feeding_set.all %}
 				<tr>
 					<td>{{feeding.date}}</td>
 					<td>{{feeding.get_meal_display}}</td>
@@ -49,7 +49,7 @@
 <div class="row">
 	<div class="col s6">
 
-		<form action="{% url 'playdates_create' baby.id %}" method="POST">
+		<form action="{% url 'playdates_create' %}" method="POST">
 			{% csrf_token %}
 			{{ playdate_form.as_p }}
 			<button type="submit" class="btn">Add Playdate</button>
