--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -60,7 +60,7 @@
 				<tr>
 					<th>Date</th>
 					<th>Time</th>
-					<th>Location</th>	
+					<th>Location</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -75,4 +75,16 @@
 		</table>
 	</div>
 </div>
+
+<script>
+	const dateEl = document.getElementById('id_date');
+	// M is Materialize's global variable
+	M.Datepicker.init(dateEl, {
+		format: 'yyyy-mm-dd',
+		defaultDate: new Date(),
+		setDefaultDate: true,
+		autoClose: true
+	});
+</script>
+
 {% endblock content %}
