--- a/main_app/templates/main_app/baby_form.html
+++ b/main_app/templates/main_app/baby_form.html
@@ -16,4 +16,15 @@
     <button type="submit" class="btn">Submit</button>
 </form>
 
+<script>
+	const dateEl = document.getElementById('id_date_of_birth');
+	// M is Materialize's global variable
+	M.Datepicker.init(dateEl, {
+		format: 'yyyy-mm-dd',
+		defaultDate: new Date(),
+		setDefaultDate: true,
+		autoClose: true
+	});
+</script>
+
 {% endblock content %}
