--- a/main_app/templates/main_app/playdate_form.html
+++ b/main_app/templates/main_app/playdate_form.html
@@ -13,4 +13,15 @@
     </table>
     <input type="submit" value="Submit!" class="btn">
 </form>
+
+<script>
+	const dateEl = document.getElementById('id_date');
+	// M is Materialize's global variable
+	M.Datepicker.init(dateEl, {
+		format: 'yyyy-mm-dd',
+		defaultDate: new Date(),
+		setDefaultDate: true,
+		autoClose: true
+	});
+</script>
 {% endblock %}
