added time picker to forms

--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -77,6 +77,9 @@
 
 <script>
 
+	const timer = document.getElementById('id_time')
+	M.Timepicker.init(timer, {})
+
 	const select = document.querySelector('select');
 	M.FormSelect.init(select, {})
 
