--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -78,7 +78,9 @@
 <script>
 
 	const timer = document.getElementById('id_time')
-	M.Timepicker.init(timer, {})
+	M.Timepicker.init(timer, {
+		twelveHour: false,
+	})
 
 	const select = document.querySelector('select');
 	M.FormSelect.init(select, {})
