--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -52,31 +52,22 @@
 
 <div class="row">
 	<div class="col s6">
-
-		<form action="{% url 'playdates_create' %}" method="POST">
-			{% csrf_token %}
-			{{ playdate_form.as_p }}
-			<button type="submit" class="btn">Add Playdate</button>
-		</form>
-
-		<table class="striped">
-			<thead>
-				<tr>
-					<th>Date</th>
-					<th>Time</th>
-					<th>Location</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for playdate in baby.playdates_set.all %}
-				<tr>
-					<td>{{playdate.date}}</td>
-					<td>{{playdate.time}}</td>
-					<td>{{playdate.location}}</td>
-				</tr>
-				{% endfor %}
-			</tbody>
-		</table>
+		<h3>Playdates:</h3>
+		{% if baby.playdate.count%}
+		{% for playdate in baby.playdate.all %}
+		<div class="card">
+			<div class="card-content">
+				<span class="card-title">
+					Playdate at {{playdate.location}}
+				</span>
+				<p>Date: {{playdate.date}}</p>
+				<p>Time: {{playdate.time}}</p>
+			</div>
+		</div>
+		{% endfor %}
+		{% else %}
+		<h5>No playdates!</h5>
+		{% endif %}
 	</div>
 	<div class="col s6">
 		<h3>Available Playdates</h3>
@@ -102,7 +93,7 @@
 		<h5>Baby already has all playdates available!</h5>
 		{% endif %}
 	</div>
-</div>	
+</div>
 
 
 <script>
@@ -116,7 +107,7 @@
 	M.FormSelect.init(select, {})
 
 	const dateEl = document.getElementById('id_date');
-	
+
 	// M is Materialize's global variable
 	M.Datepicker.init(dateEl, {
 		format: 'yyyy-mm-dd',
