update page title font and add labels to add baby form unit of measure

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1>About Little Life </h1>
+<h1 class="page-title">About Little Life </h1>
 <hr>
 
 <p>
@@ -14,8 +14,6 @@
 	developmental milestones but also facilitates seamless 
 	coordination for playdates with fellow parents. 
 </p>
-
-<br>
 
 <p>
 	With Little Life Log, stay informed about your child's 
