--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -9,7 +9,7 @@
 				<span class="card-title">{{ baby.name }}</span>
 				<p>Parent User: {{baby.user.name}}</p>
 				<p>Date of Birth: {{ baby.date_of_birth }}</p>
-				<p>Age: Functionality Incoming</p>
+				<p>Age (months): Functionality Incoming</p>
 				<p>Height (cm): {{ baby.height }}</p>
 				<p>Weight (lb): {{ baby.weight }}</p>
 			</div>
@@ -32,7 +32,7 @@
 					<th>Date</th>
 					<th>Meal</th>
 					<th>Time</th>
-					<th>Amount</th>
+					<th>Amount (ml)</th>
 				</tr>
 			</thead>
 			<tbody>
