--- a/main_app/templates/main_app/baby_confirm_delete.html
+++ b/main_app/templates/main_app/baby_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Remove Child Profile</h1>
+<h1 class="page-title">Remove Child Profile</h1>
 
 <h4>Are you sure you want to remove child profile<span>{{ object.name }}</span>?</h4>
 <form action="" method="POST">
