--- a/main_app/templates/babies/index.html
+++ b/main_app/templates/babies/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1>Little Life List</h1>
+<h1 class="page-title">Little Life List</h1>
 
 {% for baby in babies %}
 <a href="{% url 'detail' baby.id %}">
