--- a/main_app/templates/main_app/playdate_confirm_delete.html
+++ b/main_app/templates/main_app/playdate_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Delete Playdate</h1>
+<h1 class="page-title">Delete Playdate</h1>
 
 <h4>Are you sure you want to delete playdate<span>{{ object.name }}</span>?</h4>
 
