--- a/main_app/templates/main_app/playdate_form.html
+++ b/main_app/templates/main_app/playdate_form.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 {% if object %}
-<h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+<h1 class="page-title">Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-<h1>Add a Playdate:</h1>
+<h1 class="page-title">Add a Playdate:</h1>
 {% endif %}
 <form action="" method="post">
     {% csrf_token %}
