--- a/main_app/templates/main_app/playdate_list.html
+++ b/main_app/templates/main_app/playdate_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Playdate List</h1>
+<h1 class="page-title">Playdate List</h1>
 
 {% for playdate in playdate_list %}
 <a href="{% url 'playdates_detail' playdate.id %}">
