--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Sign Up</h1>
+<h1 class="page-title">Sign Up</h1>
 
 <form method="POST" action="{% url 'signup' %}">
     {% csrf_token %}
