updated parent user field to render on page

--- a/main_app/templates/babies/detail.html
+++ b/main_app/templates/babies/detail.html
@@ -7,7 +7,7 @@
 		<div class="card">
 			<div class="card-content">
 				<span class="card-title">{{ baby.name }}</span>
-				<p>Parent User: {{baby.user.name}}</p>
+				<p>Parent User: {{baby.user}}</p>
 				<p>Date of Birth: {{ baby.date_of_birth }}</p>
 				<p>Age (months): Functionality Incoming</p>
 				<p>Height (cm): {{ baby.height }}</p>
