--- a/main_app/templates/babies/index.html
+++ b/main_app/templates/babies/index.html
@@ -9,7 +9,7 @@
 	<div class="card">
 		<div class="card-content">
 			<span class="card-title">{{ baby.name }}</span>
-			<p>Parent User: {{baby.user.name}}</p>
+			<p>Parent User: {{baby.user}}</p>
 			<p>Date of Birth: {{ baby.date_of_birth }}</p>
 			<!-- <p>Age: Functionality Incoming</p> -->
 			<p>Height (cm): {{ baby.height }}</p>
@@ -20,4 +20,3 @@
 
 {% endfor %}
 {% endblock content %}
-	
