--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -36,8 +36,8 @@
 						</form>
 					</li>
 					{% else %}
-					<li><a href="{% url 'login' %}">Log In</a></li>
-					<li><a href="{% url 'signup' %}">Sign Up</a></li>
+					<li><a href="{% url 'login' %}" class="top-links">Log In</a></li>
+					<li><a href="{% url 'signup' %}" class="top-links">Sign Up</a></li>
 					{% endif %}
 				</ul>
 			</div>
