--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1 class="page-title">About Little Life </h1>
+<h1 class="page-title">About Little Life Log </h1>
 <hr>
 
 <p>
@@ -25,5 +25,7 @@
 	Log becomes your indispensable companion in nurturing your 
 	child's flourishing life.
 </p>
+
+<br>
 	
 {% endblock content %}
