--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,10 +2,10 @@
 
 
 {% block content %}
-	
+
 <h1 class="page-title">Home Page</h1>
 <hr>
 <p>Welcome to Little Life Log!</p>
+<img src="https://i.imgur.com/P6XCFV7.jpg" alt="woman with two kids" width="100%" height="auto">
 
 {% endblock content %}
-	
